--- a/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
+++ b/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
@@ -42,7 +42,9 @@
     "{{'These are so called **amacrine cells** (vide: image), distinct from the photoreceptors (rodes and cones) and ganglion cells (which send the information to structures beyond the retina). As far as I remember there are about 20 kinds of amacrine cells, possibly pointing to a diversity of roles they perform.' | fndetail: 4}}\n",
     "\n",
     "## References:\n",
-    "Everything I learned "
+    "Everything I learned about the avian centrifugal visual system (as well as the second figure included in this post) comes from:\n",
+    "\n",
+    "Güntürkün, O., Stacho, M., & Ströckens, F. (2020). The Brains of Reptiles and Birds. In J. H. Kaas (Ed.), Evolutionary Neuroscience (2nd ed., pp. 159-212). London: Elsevier Academic Press."
    ]
   },
   {
