--- a/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
+++ b/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Knee-jerks\" in chicken retinas\n",
+    "# Knee-jerks in chicken retinas\n",
+    "> When the retina needs to talk to itself\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
