--- a/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
+++ b/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
@@ -18,9 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [patellar reflex/knee-jerk](https://en.wikipedia.org/wiki/Patellar_reflex) is a simple involuntary reaction. In response to a sudden stretch of the patellar tendon, the quadriceps muscle contracts and straightens the knee. The brain is not involved - the spinal cord (more specifically: segments;;;;; L2, L3, and L4, which control this part of the body) sends a motor command directly to the muscle upon receiving sensory information from the knee, without consulting the central nervous system.\n",
-    "\n",
-    "#![](imgs/2020_11_29/patellar.png)\n",
+    "![](imgs/2020_11_29/patellar.png)\n",
     "\n",
     "Something similar can be found in retinas of most vertebrates: a \"low-level\" neural structure receiving visual information and immediately feeding back to the retina without involvement of \"high-level\" regions. Although in some groups this centrifugal visual system (it's called that because the information flows not just from the retina\\[to the center\\] but also back to the retina\\[from the center\\]) consists of barely a handful of neurons;;;;, other animals have developed a much more sophisticated wiring, possibly pointing to a vital role it may play in their case.\n",
     "\n",
@@ -31,18 +29,19 @@
     "3. The ION projects back to the same retina but to its *ventral* part, observing the upper visual field - sky, not the ground, like the part that initiated the loop.\n",
     "4. Specialised cells;;;;;;;;;;;;;; in the ventral retina project to the cells in the dorsal retina, thus closing the entire loop.\n",
     "\n",
-    "#![](imgs/2020_11_29/ionloop.png)\n",
+    "![](imgs/2020_11_29/ionloop.png)\n",
     "\n",
     "What could possibly be the function of this strange loop? Since these birds often fall prey to aerial predators (such as eagles), some researchers suggested that it may be an \"early warning system\". The dorsal retina detects a fast moving shadow - a sign of some object directly above, possibly a danger. The loop allows it to inform the ventral retina to scan the corresponding region of the sky in search for a predator which may have cast this shadow. At the same time, the *intra-retinal connection* allows both retinal halves to coordinate and efficiently look for signs of danger in the sky as well as on the ground.\n",
     "\n",
     "If this hypothesis is true, the retina-OT-ION-retina loop would be one of the most interesting examples of how the nervous system can fine-tune to the particular demands of the environment of the species - in this case, the high likelihood of falling prey to a predator hunting from the sky.\n",
     "\n",
     "\n",
-    "\n",
     "## References:\n",
     "Everything I learned about the avian centrifugal visual system (as well as the second figure included in this post) comes from:\n",
     "\n",
-    "Güntürkün, O., Stacho, M., & Ströckens, F. (2020). The Brains of Reptiles and Birds. In J. H. Kaas (Ed.), Evolutionary Neuroscience (2nd ed., pp. 159-212). London: Elsevier Academic Press."
+    "Güntürkün, O., Stacho, M., & Ströckens, F. (2020). The Brains of Reptiles and Birds. In J. H. Kaas (Ed.), Evolutionary Neuroscience (2nd ed., pp. 159-212). London: Elsevier Academic Press.\n",
+    "\n",
+    "{{ 'These segments are also called **neuromeres**.' | fndetail: 1 }}"
    ]
   },
   {
