--- a/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
+++ b/_notebooks/2020-11-29-knee-jerks-in-avian-retinas.ipynb
@@ -18,16 +18,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The [patellar reflex/knee-jerk](https://en.wikipedia.org/wiki/Patellar_reflex) is a simple involuntary reaction. In response to a sudden stretch of the patellar tendon, the quadriceps muscle contracts and straightens the knee. The brain is not involved - the spinal cord (more specifically: segments {% fn 1 %} (L2, L3, and L4, which control this part of the body) sends a motor command directly to the muscle upon receiving sensory information from the knee, without consulting the central nervous system.\n",
+    "\n",
     "![](imgs/2020_11_29/patellar.png)\n",
     "\n",
-    "Something similar can be found in retinas of most vertebrates: a \"low-level\" neural structure receiving visual information and immediately feeding back to the retina without involvement of \"high-level\" regions. Although in some groups this centrifugal visual system (it's called that because the information flows not just from the retina\\[to the center\\] but also back to the retina\\[from the center\\]) consists of barely a handful of neurons;;;;, other animals have developed a much more sophisticated wiring, possibly pointing to a vital role it may play in their case.\n",
+    "Something similar can be found in retinas of most vertebrates: a \"low-level\" neural structure receiving visual information and immediately feeding back to the retina without involvement of \"high-level\" regions. Although in some groups this centrifugal visual system (it's called that because the information flows not just from the retina\\[to the center\\] but also back to the retina\\[from the center\\]) consists of barely a handful of neurons{% fn 2 %}, other animals have developed a much more sophisticated wiring, possibly pointing to a vital role it may play in their case.\n",
     "\n",
-    "The most developed centrifugal visual system known is found in granivorous (i.e. seed-eating) birds. In their case, the role equivalent to the spinal cord is played by a small structure called the **isthmooptic nucleus** (ION) located very close to the **optic tectum** (OT);;;;, the most basic visual structure in birds. This proximity is not accidental because ION completely depends on OT for its input. According to our current best knowledge the process looks something like this:\n",
+    "The most developed centrifugal visual system known is found in granivorous (i.e. seed-eating) birds. In their case, the role equivalent to the spinal cord is played by a small structure called the **isthmooptic nucleus** (ION) located very close to the **optic tectum** (OT){% fn 3 %}, the most basic visual structure in birds. This proximity is not accidental because ION completely depends on OT for its input. According to our current best knowledge the process looks something like this:\n",
     "\n",
     "1. When retina detects a fast moving shadow-like shape in the lower visual field, it sends this information to the OT.\n",
     "2. The OT relays it to the ION.\n",
     "3. The ION projects back to the same retina but to its *ventral* part, observing the upper visual field - sky, not the ground, like the part that initiated the loop.\n",
-    "4. Specialised cells;;;;;;;;;;;;;; in the ventral retina project to the cells in the dorsal retina, thus closing the entire loop.\n",
+    "4. Specialised cells{% fn 4 %} in the ventral retina project to the cells in the dorsal retina, thus closing the entire loop.\n",
     "\n",
     "![](imgs/2020_11_29/ionloop.png)\n",
     "\n",
@@ -41,7 +43,10 @@
     "\n",
     "Güntürkün, O., Stacho, M., & Ströckens, F. (2020). The Brains of Reptiles and Birds. In J. H. Kaas (Ed.), Evolutionary Neuroscience (2nd ed., pp. 159-212). London: Elsevier Academic Press.\n",
     "\n",
-    "{{ 'These segments are also called **neuromeres**.' | fndetail: 1 }}"
+    "{{ 'These segments are also called **neuromeres**.' | fndetail: 1 }}\n",
+    "{{ 'We are one such species.' | fndetail: 2 }}\n",
+    "{{ 'The mammalian equivalent of the **optic tectum** are the **superior colliculi** but in primates they serve only secondary function. For us, the most important visual structure beyond the neocortex is the **lateral geniculate nucleus**.' | fndetail: 3 }}\n",
+    "{{ 'These are so called **amacrine cells** (vide: image), distinct from the photoreceptors (rodes and cones) and ganglion cells (which send the information to structures beyond the retina). As far as I remember there are about 20 kinds of amacrine cells, possibly pointing to a diversity of roles they perform.' | fndetail: 4 }}"
    ]
   },
   {
